[package]
name = "tx-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
rust_decimal = "1.34"
rust_decimal_macros = "1.34"
tokio = { version = "1.38", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["full"] }
csv-async = { version = "1.3.0", features = ["tokio", "with_serde"] }
csv = { version = "1.3.0" }
serde = { version = "1.0.203", features = ["derive"] }

[dev-dependencies]
rstest = "0.21.0"
rstest_macros = "0.21.0"
async-std = { version = "1.12.0", features = ["attributes"] }